--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,25 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Vu Hoai Nam
     - name: Date of Birth
-      value: 14th March 1879
+      value: 12th August 1990
     - name: Languages
-      value: English, German
+      value: Vietnamese, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Posts and Telecommunications Institute of Technology, Hanoi, Vietnam
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Computer Engineering.
+    - title: Master
+      institution: Chonnam National University, Gwangju, South Korea
+      year: 2015
       description:
-        - Description 1.
-        - Description 2.
+        - Electronics and Computer Engineering.
 
 - title: Experience
   type: time_table
